# SGML-Sales

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/skills/draft-outreach/: SKILL.md
.claude/skills/prospect-research/: SKILL.md
.claude/skills/qualify-lead/: SKILL.md
.github/workflows/: ci.yml
data/prospect-imports/: README.md
docs/: ARCHITECTURE.md  BRANDING.md  COLD-LEAD-PLAYBOOK.md  ICP-FILTER-SPEC.md  MARKETING-LEAD-IMPORT.md  OUTREACH-VOICE.md  SALES-STRATEGY.md
docs/lead-magnets/: profit-leak-checklist.md
docs/prospecting/: APOLLO-FREE-WALKTHROUGH.md  STORE-LEADS-RUNBOOK.md  web-research-seed-list.md
scripts/: setup.sh
src/sgml_sales/: __init__.py  config.py  database.py  main.py
src/sgml_sales/api/: __init__.py  crud.py  router.py
src/sgml_sales/api/routes/: __init__.py  customers.py  invoices.py  leads.py  opportunities.py  orders.py  products.py  reports.py
src/sgml_sales/core/: __init__.py  enums.py
src/sgml_sales/models/: __init__.py  customer.py  invoice.py  lead.py  opportunity.py  order.py  product.py
src/sgml_sales/schemas/: __init__.py  inputs.py  reports.py
src/sgml_sales/services/: __init__.py  accounting.py  marketing_import.py  pipeline.py  prospect_import.py  store_leads.py
tests/: conftest.py  test_lead_lifecycle.py  test_marketing_import.py  test_pipeline_flow.py  test_prospect_import.py
